0x07-python-test_driven_development/tests/0-add_integer.txt
add_integer = __import__(0-add_integer).add_integer
>>> add_integer(1, 2)
3
>>> add_integer(7, 8.7)
15
>>> add_integer(, 8.7)
  File "<stdin>", line 1
    add_integer(, 8.7)
                ^
SyntaxError: invalid syntax
>>> add_integer(8.7)
106
>>> add_integer(-2, )
96
>>> add_integer(-2 )
96
>>> add_integer()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: add_integer() missing 1 required positional argument: 'a'
>>> add_integer
<function add_integer at 0x01C9F2F8>
>>> add_integer(a,)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'a' is not defined
>>> add_integer("str", )
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "<stdin>", line 3, in add_integer
TypeError: a not int
>>> add_integer("str", 2)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "<stdin>", line 3, in add_integer
TypeError: a not int
